build: Downgrade to Java 14 (without preview features)